--- a/pages/index.css
+++ b/pages/index.css
@@ -17,3 +17,8 @@
 @import url(/blocks/places/__catalogue/places__catalogue.css);
 @import url(/blocks/card/card.css);
 @import url(/blocks/card/__image/card__image.css);
+@import url(/blocks/card/__info/card__info.css);
+@import url(/blocks/card/__title/card__title.css);
+@import url(/blocks/card/__like/card__like.css);
+@import url(/blocks/button/button.css);
+@import url(/blocks/button/__like/buttton__like.css);
