--- a/blocks/button/__like/buttton__like.css
+++ b/blocks/button/__like/buttton__like.css
@@ -4,3 +4,15 @@
     min-width: 22px;
     min-height: 19px;
 }
+
+.button__like:hover {
+    opacity: .4;
+}
+
+.button__like_active {
+    background-image: url(/images/black_like_button.svg);
+}
+
+.button:active {
+    border-style: inset;
+}
