--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,6 +5,6 @@
   font-family: 'Inter', Arial, sans-serif;
   background: black;
   font-weight: normal;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
+  /*-moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;*/
   }
