--- a/blocks/profile/__cover/profile__cover.css
+++ b/blocks/profile/__cover/profile__cover.css
@@ -9,8 +9,8 @@
         align-items: center;
     }
 
-.profile__cover:hover {
+/*.profile__cover:hover {
         opacity: 0.8;
         transition: .5s linear;
-    }
+    }*/
 
