--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,14 @@
 @import url(/vendor/normalize.css);
+
 @import url(/vendor/fonts/fonts.css);
+
 @import url(/blocks/page/page.css);
+
 @import url(/blocks/header/header.css);
 @import url(/blocks/header/__logo/header__logo.css);
+
 @import url(/blocks/container/container.css);
+
 @import url(/blocks/profile/profile.css);
 @import url(/blocks/profile/__avatar/profile__avatar.css);
 @import url(/blocks/profile/__image/profile__image.css);
@@ -13,14 +18,23 @@
 @import url(/blocks/profile/__button-edit/profile__button-edit.css);
 @import url(/blocks/profile/__about/profile__about.css);
 @import url(/blocks/profile/__button-add/profile__button-add.css);
+
+@import url(/blocks/popup/popup.css);
+@import url(/blocks/popup/__container/popup__container.css);
+@import url(/blocks/popup/__close/popup__close.css);
+
 @import url(/blocks/places/places.css);
 @import url(/blocks/places/__catalogue/places__catalogue.css);
+
 @import url(/blocks/card/card.css);
 @import url(/blocks/card/__image/card__image.css);
 @import url(/blocks/card/__info/card__info.css);
 @import url(/blocks/card/__title/card__title.css);
 @import url(/blocks/card/__like/card__like.css);
+
 @import url(/blocks/button/button.css);
 @import url(/blocks/button/__like/buttton__like.css);
-@import url(/blocks/button/__like/button__like_active.css);
+
+@import url(/blocks/transition/transition.css);
+
 @import url(/blocks/footer/footer.css);
