--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -6,4 +6,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
