--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -5,8 +5,9 @@
     transform: translate(-50%, -50%);
     max-width: 430px;
     width: 100%;	
-    background: #fff;
-    border-radius: 10px; 
+    background: #FFFFFF;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
 }
 
 @media screen and (max-width: 550px) {
@@ -17,7 +18,6 @@
 
 @media screen and (max-width: 375px) {
     .popup__container {
-     max-width: 282px;
-     max-height: 322px;
+     max-width: 240px;
     }
 }
