--- a/pages/index.css
+++ b/pages/index.css
@@ -21,7 +21,12 @@
 
 @import url(/blocks/popup/popup.css);
 @import url(/blocks/popup/__container/popup__container.css);
+@import url(/blocks/popup/__opened/popup__opened.css);
 @import url(/blocks/popup/__close/popup__close.css);
+@import url(/blocks/popup/__button-submit/popup__button-submit.css);
+@import url(/blocks/popup/__title/popup__title.css);
+@import url(/blocks/popup/__item/popup__item.css);
+@import url(/blocks/popup/__form/popup__form.css);
 
 @import url(/blocks/places/places.css);
 @import url(/blocks/places/__catalogue/places__catalogue.css);
