--- a/blocks/popup/__button-submit/popup__button-submit.css
+++ b/blocks/popup/__button-submit/popup__button-submit.css
@@ -6,8 +6,8 @@
     font-size: 18px;
     line-height: 1.2;
     border: 0;
-    /*color: #fff;
-    background: #000000;*/
+    color: #fff;
+    background: #000000;
     border-radius: 2px;
 }
 
