--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -4,6 +4,7 @@
     width: 100%;
     border-radius: 50%;
     object-fit: cover;
+    background: #C4C4C4;
 }
 
 @media screen and (max-width: 760px) {
