--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,4 +1,5 @@
 .popup__container {
+   /* display: none;*/
     position: fixed;
     left: 50%;
     top: 50%;
@@ -18,6 +19,6 @@
 
 @media screen and (max-width: 375px) {
     .popup__container {
-     max-width: 240px;
+        max-width: 240px;
     }
 }
