--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,5 @@
 .popup {
+    /*display: none;*/
     display: flex;
     position: fixed;
     top: 0;
@@ -11,5 +12,4 @@
     opacity: 0;
     background-color: rgba(0,0,0,.5);
     transition: visibility .2s, opacity .4s ease-in-out;
-    
 }
