--- a/pages/index.css
+++ b/pages/index.css
@@ -18,10 +18,12 @@
 @import url(/blocks/profile/__button-edit/profile__button-edit.css);
 @import url(/blocks/profile/__about/profile__about.css);
 @import url(/blocks/profile/__button-add/profile__button-add.css);
+@import url(/blocks/profile/__edit-button/profile__edit-button.css);
 
 @import url(/blocks/popup/popup.css);
 @import url(/blocks/popup/__container/popup__container.css);
 @import url(/blocks/popup/__edit/popup__edit.css);
+@import url(/blocks/popup/__opened/popup__opened.css);
 @import url(/blocks/popup/__close/popup__close.css);
 @import url(/blocks/popup/__button-submit/popup__button-submit.css);
 @import url(/blocks/popup/__title/popup__title.css);
