изменены пути images

--- a/blocks/user-info/__photo/user-info__photo.css
+++ b/blocks/user-info/__photo/user-info__photo.css
@@ -7,7 +7,7 @@
     top: 159px;
     background-size: cover;
     background-position: center;
-    background-image: url(/images/avatar.jpg);
+    background-image: url(./images/avatar.jpg);
 }
   
 @media screen and (max-width: 980px) {
