--- a/blocks/profile/__button-avatar/profile__button-avatar.css
+++ b/blocks/profile/__button-avatar/profile__button-avatar.css
@@ -1,7 +1,7 @@
 .profile__button-avatar {
         outline: none;
-        background-image: url(/images/pencil.svg);
+        background-image: url(./images/pencil.svg);
         width: 26px;
         height: 26px;
         border: none;
-    }
+}
