активирована кнопка like

--- a/blocks/popup/__button-submit/popup__button-submit.css
+++ b/blocks/popup/__button-submit/popup__button-submit.css
@@ -11,6 +11,10 @@
     border-radius: 2px;
 }
 
+.popup__button-submit:hover {
+    background-color: rgba(0,0,0,.8);
+}
+
 @media screen and (max-width: 375px){
     .popup__button-submit {
         margin-top: 36px;
