--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,4 +1,6 @@
 .popup__container {
+    display:none;
+    display:flex;
     position: fixed;
     left: 50%;
     top: 50%;
@@ -8,6 +10,7 @@
     background: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
+    z-index: 2;
 }
 
 @media screen and (max-width: 550px) {
