изменены относительные пути

--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -1,5 +1,5 @@
 .profile__button-edit {
-    background-image: url(/images/close_button.svg);
+    background-image: url(../../../images/close_button.svg);
     min-width: 24px;
     min-height: 24px;
     border: 1px solid #fff;
