--- a/blocks/button/__like/button__like.css
+++ b/blocks/button/__like/button__like.css
@@ -1,5 +1,5 @@
 .button__like {
-    background-image: url(/images/like_button.svg);
+    background-image: url(../../../images/like_button.svg);
     border: none;
     min-width: 22px;
     min-height: 19px;
@@ -10,6 +10,6 @@
 }
 
 .button__like_active {
-    background-image: url(/images/black_like_button.svg);
+    background-image: url(../../../images/black_like_button.svg);
 }
 
