--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,5 +1,5 @@
 .popup__close {
-    background-image: url(/images/close_button.svg);
+    background-image: url(../../../images/close_button.svg);
     position: fixed;
     left: 100%;
     bottom: 100%;
