--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -1,5 +1,5 @@
 .profile__button-add {
-    background-image:url(/images/add___button.svg);
+    background-image:url(../../../images/add___button.svg);
     margin-left: auto;
     min-width: 150px;
     min-height: 50px;
