--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,5 +1,5 @@
 .profile__edit-button {
-    background-image: url(/images/edit_button.svg);
+    background-image: url(../../../images/edit_button.svg);
     min-width: 24px;
     min-height: 24px;
     border: 1px solid #fff;
