--- a/pages/index.css
+++ b/pages/index.css
@@ -29,8 +29,8 @@
 @import url(../blocks/popup/__item/popup__item.css);
 @import url(../blocks/popup/__form/popup__form.css);
 
-@import url(../blocks/places/places.css);
-@import url(../blocks/places/__catalogue/places__catalogue.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__catalogue/cards__catalogue.css);
 
 @import url(../blocks/card/card.css);
 @import url(../blocks/card/__image/card__image.css);
