--- a/pages/index.css
+++ b/pages/index.css
@@ -29,15 +29,15 @@
 @import url(../blocks/popup/__item/popup__item.css);
 @import url(../blocks/popup/__form/popup__form.css);
 
-@import url(../blocks/cards/cards.css);
-@import url(../blocks/cards/__catalogue/cards__catalogue.css);
+@import url(../blocks/places/places.css);
+@import url(../blocks/places/__catalogue/places__catalogue.css);
 
 
-@import url(../blocks/card/card.css);
-@import url(../blocks/card/__image/card__image.css);
-@import url(../blocks/card/__info/card__info.css);
-@import url(../blocks/card/__title/card__title.css);
-@import url(../blocks/card/__like/card__like.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__info/place__info.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__like/place__like.css);
 
 @import url(../blocks/button/button.css);
 @import url(../blocks/button/__like/button__like.css);
