--- a/blocks/place/__catalogue/place__catalogue.css
+++ b/blocks/place/__catalogue/place__catalogue.css
@@ -1,4 +1,4 @@
-.places__catalogue {
+.place__catalogue {
     display: grid;
     margin: 0;
     grid-template-columns: repeat(auto-fit, 282px);
@@ -9,4 +9,3 @@
     width: 100%;
     list-style: none;
 }
-      
