--- a/blocks/button/__like/button__like.css
+++ b/blocks/button/__like/button__like.css
@@ -1,4 +1,4 @@
-/*.button__like {
+.button__like {
     background-image: url(../../../images/like_button.svg);
     border: none;
     min-width: 22px;
@@ -12,4 +12,3 @@
 .button__like_active {
     background-image: url(../../../images/black_like_button.svg);
 }
-*/
