--- a/blocks/place/__buttom-like/place__buttom-like.css
+++ b/blocks/place/__buttom-like/place__buttom-like.css
@@ -1,14 +1,14 @@
-.button__like {
+.place__button-like {
     background-image: url(../../../images/like_button.svg);
     border: none;
     min-width: 22px;
     min-height: 19px;
 }
 
-.button__like:hover {
+.place__button-like:hover {
     opacity: .4;
 }
 
-.button__like_active {
+.bplace__button-like_active {
     background-image: url(../../../images/black_like_button.svg);
 }
