--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,24 +1,10 @@
-/*.header {
-    min-height: 132px;
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid #A5A5A5;
-}
-
-@media screen and (min-widht:300px) and (max-widht: 1024px) {
-    .header{
-        width: 320px;
-        height: 56px;
-        left: 0px;
-        top: 28px;
-    }
-}*/
-
 .header {
     max-width: 882px;
     margin: auto;
     margin-top: 45px;
     border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+    opacity: 0.7;
+
 }
 
 @media screen and (max-width: 475px) {
