--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,7 @@
     max-width: 882px;
     margin: auto;
     margin-top: 45px;
-    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+    border-bottom: 1px solid #545454;
     opacity: 0.7;
 
 }
