--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,7 +2,7 @@
     width: 100%;
     margin-top: 67px;
     margin-bottom: 60px;
-    font-family: Inter;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
