--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -11,6 +11,9 @@
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     z-index: 2;
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0s,opacity .5s linear;
 }
 
 @media screen and (max-width: 550px) {
