--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,18 +1,18 @@
 .footer {
-    width: 100%;
-    margin-top: 67px;
-    margin-bottom: 60px;
-    font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 22px;
-    color: #545454;
-}
-
-@media screen and (max-width: 475px) {
+    max-width: 880px;
+    margin: 0 auto;
+    padding: 67px 0 60px;
+  }
+  
+  @media (max-width: 1023px) {
     .footer {
-       margin-top: 48px;
-       margin-bottom: 36px;
+      max-width: 581px;
     }
-}
+  }
+  
+  @media (max-width: 767px) {
+    .footer {
+      max-width: 282px;
+      padding: 48px 0 36px;
+    }
+  }
