--- a/pages/index.css
+++ b/pages/index.css
@@ -49,3 +49,4 @@
 @import url(../blocks/transition/transition.css);
 
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
