удален profile__cover transition

--- a/blocks/place/__button-like/place__button-like.css
+++ b/blocks/place/__button-like/place__button-like.css
@@ -3,15 +3,11 @@
     border: none;
     min-width: 22px;
     min-height: 19px;
-    display: flex;
-    margin-left: 21px;
-    justify-content: center;
-    max-width: 21px;
-    flex-wrap: wrap;
+    outline: none;
 }
 
 .place__button-like:hover {
-    opacity: .7;
+    opacity: .5;
 }
 
 .place__button-like_active {
