--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     text-transform: none;
     overflow: visible;
+    transition: opacity .5s linear;
 }
 
 .button:active {
