--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -7,8 +7,9 @@
 }
 
 @media screen and (max-width: 475px){
-.header__logo {
-    max-width: 104px;
-    padding-bottom: 31px;
-}
+   .header__logo {
+      max-width: 104px;
+      max-height: 24px;
+      padding-bottom: 31px;
+   }
 }
