--- a/blocks/place/__button-like/place__button-like.css
+++ b/blocks/place/__button-like/place__button-like.css
@@ -10,6 +10,4 @@
     opacity: .5;
 }
 
-.place__button-like_active {
-    background-image: url(../../../images/black_like_button.svg);
-}
+git commit -m 'profile__button-add'
