--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -2,7 +2,7 @@
     border: 0;
     padding: 0;
     width: 100%;
-    min-height: 27px;
+    height: 27px;
     box-sizing: border-box;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
     font-weight: normal;
