--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,5 @@
 .popup {
     display: none;
-    /* display: flex; */
     position: fixed;
     top: 0;
     left: 0;
@@ -12,4 +11,5 @@
     opacity: 0;
     background-color: rgba(0,0,0,.5);
     transition: visibility .2s, opacity .5s ease-in-out;
+    z-index: 2;
 }
