--- a/blocks/place/__button-like/_active/place__button-like_active.css
+++ b/blocks/place/__button-like/_active/place__button-like_active.css
@@ -1,3 +1,7 @@
 .place__button-like_active {
     background-image: url(../../../images/black_like_button.svg);
+    border: none;
+    min-width: 22px;
+    min-height: 19px;
+    outline: none;
 }
