--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,11 +1,11 @@
 .popup__close {
     background-image: url(../../../images/close_button.svg);
-    position: fixed;
     left: 100%;
     bottom: 100%;
     border: 0;
     min-width: 40px;
-    min-height: 40px;
+    min-height: 40px; 
+    position: absolute;
   }
   
   .popup__close:hover {
