--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,16 +1,11 @@
 .popup__container {
-    display:none;
-    display:flex;
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 430px;
-    width: 100%;
-    background: #FFFFFF;
+    width: 430px;
+    background: #fff;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
-}
+    position: relative;
+  }
+  
 
 @media screen and (max-width: 550px) {
     .popup__container {
