--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,15 +1,15 @@
 .popup {
     display: none;
-    position: fixed;
+    display: flex;
+    background: #00000079;
     top: 0;
+    bottom: 0;
+    right: 0;
     left: 0;
-    align-items: center;
+    display: none;
+    position: fixed;
     justify-content: center;
-    visibility: hidden;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    background-color: rgba(0,0,0,.5);
-    transition: visibility .2s, opacity .5s ease-in-out;
+    align-items: center;
     z-index: 2;
 }
+  
