--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,20 +3,16 @@
     margin: auto;
     margin-top: 45px;
     border-bottom: 1px solid rgba(84, 84, 84, 0.7);
-    opacity: 0.7;
-
 }
 
 @media screen and (max-width: 475px) {
     .header {
-        margin: 0;
-        margin-top: 28px;
+        max-width: 320px;
     }
 }
 
 @media screen and (max-width: 920px) {
     .header {
-        margin-left: 48px;
-        margin-right: 48px;
+        max-width: 581px;
     }
 }
