--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,19 +1,21 @@
 .popup__title {
-    margin: 34px 36px 54px;
-    font-weight: 700;
+    font-style: normal;
+    font-weight: 900;
     font-size: 24px;
-    line-height: 1.2;
+    color: #000000;
+    margin-top: 34px; 
+    margin-left: 34px;
+    margin-bottom: 54px;
+    margin-right: 34px;
 }
 
-@media screen and (max-width: 375px){
+@media screen and (max-width: 767px){
     .popup__title {
         font-size: 18px;
-        margin: 30px 20px 36px;
-    }
-}
-
-@media screen and (max-width: 475px){
-    .popup__title {
-        margin: 24px;
+        width: 238px;
+        margin-left: 22px;
+        margin-right: 22px;
+        margin-top: 25px;
+        margin-bottom: 75px;
     }
 }
