исправлены отступы в profile

--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -7,13 +7,17 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    color: #FFFFFF;
 }
 
 
-@media screen and (max-width: 475px) {
+@media screen and (max-width: 767px) {
     .profile__name  {
-        max-width: 200px;
+        max-width: 189px;
         font-size: 27px;
-        line-height: 2.03;
+        line-height: 33px;
+        text-align: center;
+        font-style: normal;
+        font-weight: 500;
     }
 }
