--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -7,11 +7,13 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    padding-top: 16px;
 }
 @media screen and (max-width: 760px) {
     .profile__about {
         grid-column: 1/3;
         margin: auto;
+        padding-top: 14px;
     }
 }
 @media screen and (max-width: 475px) {
