--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -4,6 +4,8 @@
     min-height: 24px;
     border: 1px solid #fff;
     align-self: center;
+    outline: none;
+    cursor: pointer;
 }
 
 .profile__edit-button:hover {
