--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -5,8 +5,9 @@
     border-bottom: 1px solid rgba(0, 0, 0, .2);
     font-weight: normal;
     font-size: 14px;
-    line-height: 2;
+    line-height: 17px;
     margin-bottom: 30px;
+    padding-bottom: 13px;
 }
 
 
