--- a/blocks/places/__button-like/_active/places__button-like_active.css
+++ b/blocks/places/__button-like/_active/places__button-like_active.css
@@ -1,5 +1,5 @@
-.place__button-like_active {
-    background-image: url(../../../images/black_like_button.svg);
+.places__button-like_active {
+    background-image: url(../../../../images/black_like_button.svg);
     border: none;
     min-width: 22px;
     min-height: 19px;
