--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,14 +1,5 @@
 .popup__container {
-    width: 430px;
-    background: #fff;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
-    position: relative;
-  }
-  
-
-@media screen and (max-width: 767px) {
-    .popup__container {
-        max-width: 282px;
-    }
+    margin: auto;
+	position: relative;
+	max-width: 75vw;
 }
