активирована функция добавления новых  фото

--- a/pages/index.css
+++ b/pages/index.css
@@ -28,8 +28,10 @@
 @import url(../blocks/popup/__item/popup__item.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__content/popup__content.css);
+@import url(../blocks/popup/__pic/popup__pic.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__name/popup__name.css);
+
 
 
 
