--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -9,5 +9,8 @@
     justify-content: center;
     align-items: center;
     z-index: 2;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility .5s, opacity 0.5s linear;
 }
   
