--- a/pages/index.css
+++ b/pages/index.css
@@ -31,6 +31,7 @@
 @import url(../blocks/popup/_pic/popup_pic.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__caption/popup__caption.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
 
 
 @import url(../blocks/elements/elements.css);
