--- a/blocks/popup/__button-submit/popup__button-submit.css
+++ b/blocks/popup/__button-submit/popup__button-submit.css
@@ -21,6 +21,7 @@
     border: 1px solid #000;
     color: #000;
     opacity: .2;
+    box-shadow: 0 1px 0 0 solid #FF0000;
 }
 
 @media screen and (max-width: 375px){
