--- a/blocks/popup/__input/__input-error/popup__input-error.css
+++ b/blocks/popup/__input/__input-error/popup__input-error.css
@@ -3,12 +3,11 @@
     font-size: 12px;
     line-height: 15px;  
     opacity: 1;
-    margin-bottom: 20px;
-    height: 12px;
-    width: 100%;
+    line-height: 17px;
+    padding-bottom: 13px;
 }
 
-
-.popup__input-error-active {
+.popup__input-error_active {
     opacity: 1;
+    box-shadow: 0 1px 0 0 solid #FF0000;
 }
