--- a/blocks/popup/__input/__input-error/popup__input-error.css
+++ b/blocks/popup/__input/__input-error/popup__input-error.css
@@ -1,13 +1,17 @@
 .popup__input-error {
-    color:#FF0000;
     font-size: 12px;
-    line-height: 15px;  
+    line-height: 15px;
+    color: red;
     opacity: 1;
-    line-height: 17px;
-    padding-bottom: 13px;
+    margin-bottom: 20px;
+    height: 12px;
+    width: 100%;
 }
 
 .popup__input-error_active {
     opacity: 1;
-    box-shadow: 0 1px 0 0 solid #FF0000;
+}
+
+.popup__error:last-of-type {
+	margin-bottom: 0;
 }
