--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -6,16 +6,16 @@
     font-weight: normal;
     font-size: 14px;
     line-height: 17px;
-    margin-bottom: 5px;
-    padding-top: 13px;
-
+    margin-bottom: 30px;
+    padding-bottom: 13px;
 }
 
+@media screen and (max-width: 464px) {
+	.popup__input {
+		width: 100%;
+	}
+}
 
-/*@media screen and (max-width: 375px) {
-   .popup__input {
-      margin-bottom: 30px;
-      font-size: 14px;
-      line-height: 17px;
-    }
-}*/
+.popup__input:invalid {
+    border-bottom: 1px solid red;
+}
