исправлены стили в popup

--- a/blocks/popup/__button-submit/popup__button-submit.css
+++ b/blocks/popup/__button-submit/popup__button-submit.css
@@ -1,27 +1,32 @@
 .popup__button-submit{
-    width: 100%;
-    min-height: 50px;
-    margin-top: 18px;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 1.2;
-    border: 0;
-    color: #fff;
-    background: #000000;
-    border-radius: 2px;
-    cursor: pointer;
+    width: 358px;
+	height: 50.15px;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 22px;
+	margin-top: 48px;
+	background: #000000;
+	border-radius: 7px;
+	width: 100%;
+	color: white;
+	border: none;
 }
 
 .popup__button-submit:hover {
-    background-color: rgba(0,0,0,.8);
+    background: rgba(0, 0, 0, 0.8);
+	color: rgba(255, 255, 255, 0.8);
+	cursor: pointer;
 }
 
 .popup__button-submit:disabled {
-    background-color: #E5E5E5;
-    border: 1px solid #000;
-    color: #000;
-    opacity: .2;
-    box-shadow: 0 1px 0 0 solid #FF0000;
+    background: #FFFFFF;
+	opacity: .2;
+	color: #000000;
+	cursor: none;
+	border: 1px solid #000000;
+	box-sizing: border-box;
+	border-radius: 2px;
 }
 
 @media screen and (max-width: 375px){
