--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,19 @@
 .popup__input {
+	width: 358px;
+	height: 27px;
+	border: 0;
+	border-bottom: 1px solid rgba(0, 0, 0, .2);
+	margin-top: 25px;
+	box-sizing: border-box;
+    padding-bottom: 13px;
+}
+
+.popup__input:invalid {
+    border-bottom: 1px solid red;
+}
+
+
+/*.popup__input {
     border: 0;
     width: 100%;
     box-sizing: border-box;
@@ -14,9 +29,5 @@
 	.popup__input {
 		width: 100%;
 	}
-}
+}*/
 
-.popup__input:invalid {
-    border-bottom: 1px solid red;
-    margin-bottom: 5px;
-}
