--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,4 +1,21 @@
 .popup__content {
+	box-sizing: border-box;
+	background-color: white;
+	border-radius: 10px;
+	z-index: 10;
+	width: 430px;
+	max-width: 80%;
+	padding: 34px 36px;
+	position: relative;
+}
+
+@media screen and (max-width: 464px) {
+	.popup__content {
+		max-width: 90%;
+	}
+}
+
+/*.popup__content {
     width: 430px;
     background: #fff;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
