--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,11 +1,15 @@
 .popup__form {
-    border: 0;
+    display: flex;
+	flex-direction: column;
+	justify-content: start;
+}
+    /*border: 0;
     padding: 0;
     max-width: 358px;
     margin: 0 36px 36px;
     visibility: visible;
-    opacity: 1;
-}
+    opacity: 1;*/
+
 
 @media screen and (max-width: 475px){
    .popup__form {
