--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,12 +1,12 @@
 .popup__title {
-    font-style: normal;
-    font-weight: 900;
-    font-size: 24px;
-    color: #000000;
-    margin-top: 34px;
-    margin-left: 34px;
-    margin-bottom: 54px;
-    margin-right: 34px;
+    margin: 0 0 29px;
+	width: 330px;
+	font-style: normal;
+	font-weight: 900;
+	font-size: 24px;
+	line-height: 29px;
+	color: #000000;
+	padding-right: 10px;
 }
 
 @media screen and (max-width: 767px){
