--- a/blocks/popup/__input/__input-error/popup__input-error.css
+++ b/blocks/popup/__input/__input-error/popup__input-error.css
@@ -3,9 +3,9 @@
     line-height: 15px;
     color: red;
     opacity: 1;
-    margin-bottom: 20px;
     height: 12px;
     width: 100%;
+    padding-top: 5px;
 }
 
 .popup__input-error_active {
