--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -7,9 +7,9 @@
     padding-bottom: 13px;
 }
 
-.popup__input:invalid {
-    border-bottom: 1px solid red;
-}
+/* .popup__input:invalid { */
+    /* border-bottom: 1px solid red; */
+/* } */
 
 
 /*.popup__input {
