--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -42,7 +42,9 @@
 @import url(../blocks/elements/__button-delete/elements__button-delete.css);
 @import url(../blocks/elements/__info/elements__info.css);
 @import url(../blocks/elements/__title/elements__title.css);
+@import url(../blocks/elements/__place-like/elements__place-like.css);
 @import url(../blocks/elements/__like/elements__like.css);
+@import url(../blocks/elements/__like-count/elements__like-count.css);
 @import url(../blocks/elements/__button-like/elements__button-like.css);
 @import url(../blocks/elements/__button-like/_active/elements__button-like_active.css);
 
