--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,17 +1,17 @@
 .profile__image {
-    display: flex;
-    position: relative;
-    max-width: 120px;
-    height: 120px;
-    width: 100%;
-    border-radius: 50%;
-    object-fit: cover;
-    background: #C4C4C4;
+width: 100%;
+height: 100%;
+border-radius: inherit;
+
+object-fit: cover;
+object-position: center 0px;
+
+padding: 0;
+margin: 0;
+transition: opacity .7s ease-in-out;
 }
 
-@media screen and (max-width: 760px) {
-    .profile__image {
-        margin: auto;
-        margin-bottom: 14px;
-    }
+.profile__image:hover {
+cursor: pointer;
+opacity: .2;
 }
