--- a/src/blocks/elements/__button-delete/elements__button-delete.css
+++ b/src/blocks/elements/__button-delete/elements__button-delete.css
@@ -1,16 +1,16 @@
 .elements__button-delete {
-    background-image: url(../../../images/delete_button.svg);
     display: block;
     width: 19px;
     height: 19px;
-    position: relative;
-    top: 30px;
-    right: 16px;
     left: 249px;
     bottom: 244px;
-    border: none;
+    position: absolute;
+    outline: none;
+    background: rgba(0, 0, 0, 0);
     cursor: pointer;
-    z-index: 2;
+    border: none;
+    top: 18px;
+    right: 15px;
 }
 
 .elements__button-delete:hover {
