--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -38,6 +38,7 @@
 
 
 @import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__item/elements__items.css);
 @import url(../blocks/elements/__catalogue/elements__catalogue.css);
 @import url(../blocks/elements/__image/elements__image.css);
 @import url(../blocks/elements/__button-delete/elements__button-delete.css);
