--- a/main.css
+++ b/main.css
@@ -838,6 +838,9 @@ template {
     position: relative;
     text-decoration: none;
 }
+.elements__item{
+    position: relative;
+}
 .elements__catalogue {
   display: grid;
   margin: 0;
